[package]
name = "replay"
version = "0.1.0"
authors = ["Acasune <tttt4aaaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
proconio = "0.3.6"
superslice="1.0.0"
rand="0.7.3"

##############

[[bin]]
name = "abc245-d"
path = "abc245d.rs"

[[bin]]
name = "abc245-e"
path = "abc245e.rs"

[[bin]]
name = "abc246-d"
path = "abc246d.rs"

[[bin]]
name = "abc246-e"
path = "abc246e.rs"

[[bin]]
name = "abc247-d"
path = "abc247d.rs"

[[bin]]
name = "abc247-e"
path = "abc247e.rs"

[[bin]]
name = "abc248-d"
path = "abc248d.rs"

[[bin]]
name = "abc248-e"
path = "abc248e.rs"

[[bin]]
name = "abc249-d"
path = "abc249d.rs"

[[bin]]
name = "abc250-d"
path = "abc250d.rs"

[[bin]]
name = "abc250-e"
path = "abc250e.rs"

[[bin]]
name = "abc251-d"
path = "abc251d.rs"

[[bin]]
name = "abc251-e"
path = "abc251e.rs"

[[bin]]
name = "abc252-d"
path = "abc252d.rs"

[[bin]]
name = "abc252-e"
path = "abc252e.rs"

[[bin]]
name = "abc253-d"
path = "abc253d.rs"

[[bin]]
name = "abc253-e"
path = "abc253e.rs"

[[bin]]
name = "abc254-d"
path = "abc254d.rs"

[[bin]]
name = "abc254-e"
path = "abc254e.rs"

[[bin]]
name = "abc255-d"
path = "abc255d.rs"

[[bin]]
name = "abc255-e"
path = "abc255e.rs"

[[bin]]
name = "abc256-d"
path = "abc256d.rs"

[[bin]]
name = "abc256-e"
path = "abc256e.rs"

[[bin]]
name = "abc257-d"
path = "abc257d.rs"

[[bin]]
name = "abc257-e"
path = "abc257e.rs"

[[bin]]
name = "abc258-d"
path = "abc258d.rs"

[[bin]]
name = "abc258-e"
path = "abc258e.rs"

[[bin]]
name = "abc259-d"
path = "abc259d.rs"

[[bin]]
name = "abc259-e"
path = "abc259e.rs"

[[bin]]
name = "abc260-d"
path = "abc260d.rs"

[[bin]]
name = "abc260-e"
path = "abc260e.rs"

[[bin]]
name = "abc261-d"
path = "abc261d.rs"

[[bin]]
name = "abc261-e"
path = "abc261e.rs"

[[bin]]
name = "abc262-d"
path = "abc262d.rs"

[[bin]]
name = "abc263-d"
path = "abc263d.rs"

[[bin]]
name = "abc263-e"
path = "abc263e.rs"

[[bin]]
name = "abc264-d"
path = "abc264d.rs"

[[bin]]
name = "abc264-e"
path = "abc264e.rs"

[[bin]]
name = "abc265-d"
path = "abc265d.rs"

[[bin]]
name = "abc265-e"
path = "abc265e.rs"

[[bin]]
name = "abc266-d"
path = "abc266d.rs"

[[bin]]
name = "abc266-e"
path = "abc266e.rs"

[[bin]]
name = "abc267-d"
path = "abc267d.rs"

[[bin]]
name = "abc267-e"
path = "abc267e.rs"

[[bin]]
name = "abc245-e-2"
path = "abc245e_2.rs"

[[bin]]
name = "abc247-e-2"
path = "abc247e_2.rs"

[[bin]]
name = "abc248-e-2"
path = "abc248e_2.rs"

[[bin]]
name = "abc249-d-2"
path = "abc249d_2.rs"

[[bin]]
name = "abc250-e-2"
path = "abc250e_2.rs"

[[bin]]
name = "abc251-e-2"
path = "abc251e_2.rs"

[[bin]]
name = "abc255-e-2"
path = "abc255e_2.rs"

[[bin]]
name = "abc257-e-2"
path = "abc257e_2.rs"
